--- a/app/src/main/res/layout/fragment_patients_details.xml
+++ b/app/src/main/res/layout/fragment_patients_details.xml
@@ -16,7 +16,6 @@
             android:id="@+id/profile_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/header_cover_image"
             android:background="@color/design_default_color_secondary"
             android:elevation="4dp"
             android:paddingBottom="24dp">
@@ -27,8 +26,6 @@
                 android:id="@+id/profile"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-
-                android:layout_below="@+id/header_cover_image"
                 android:clickable="true"
                 android:elevation="5dp"
                 android:padding="20dp"
@@ -142,7 +139,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
                 <Button
-                    android:id="@+id/button2"
+                    android:id="@+id/addNewMeasurementsButton"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
@@ -157,8 +154,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.509"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView16"
-                    app:layout_constraintVertical_bias="1.0" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
                 <TextView
                     android:id="@+id/textView20"
@@ -189,7 +185,7 @@
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="32dp"
                     android:text="Placebo"
-                    app:layout_constraintBottom_toTopOf="@+id/button2"
+                    app:layout_constraintBottom_toTopOf="@+id/addNewMeasurementsButton"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.453"
                     app:layout_constraintStart_toEndOf="@+id/textView16"
