--- a/app/src/main/res/layout/fragment_patients_add_measurements.xml
+++ b/app/src/main/res/layout/fragment_patients_add_measurements.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".patientsAddMeasurements">
+    tools:context=".view.patientsAddMeasurements">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
