--- a/app/src/main/res/layout/fragment_qr_scanner.xml
+++ b/app/src/main/res/layout/fragment_qr_scanner.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QrScannerFragment" >
+    tools:context=".view.QrScannerFragment" >
 
     <Button
         android:id="@+id/scanBtn"
