--- a/app/src/main/res/layout/fragment_patients_add_measurements.xml
+++ b/app/src/main/res/layout/fragment_patients_add_measurements.xml
@@ -70,6 +70,7 @@
             tools:layout_editor_absoluteX="15dp">
 
             <com.santalu.maskara.widget.MaskEditText
+                android:id="@+id/tempInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -89,6 +90,7 @@
             app:suffixText="mm Hg">
 
             <com.santalu.maskara.widget.MaskEditText
+                android:id="@+id/bloodInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -108,6 +110,7 @@
             app:layout_constraintTop_toBottomOf="@+id/bloodPressure">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/drugsInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Given drugs" />
@@ -124,9 +127,28 @@
             tools:layout_editor_absoluteX="0dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/descriptionInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Description" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/healthConditionDescription"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_marginTop="104dp"
+            app:layout_constraintTop_toBottomOf="@+id/measurementDescription"
+            tools:layout_editor_absoluteX="0dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/healthConditionInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Health condition" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,7 +165,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/measurementDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/healthConditionDescription" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
