--- a/app/src/main/res/layout/fragment_patients.xml
+++ b/app/src/main/res/layout/fragment_patients.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.PatientsFragment">
+    tools:context=".view.fragment.PatientsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
