--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorRed">#ff0000</color>
     <color name="green">#8BC34A</color>
+    <color name="orange">#FF9800</color>
 </resources>
